samples/_failures_safe/1761594843_a1360a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_066b7032.c: In function ‘main’:
./samples/SAFE/__tmp_066b7032.c:148:64: error: expected ‘)’ at end of input
  148 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1
      |                         ~                                      ^
      |                                                                )
./samples/SAFE/__tmp_066b7032.c:148:17: error: too few arguments to function ‘read_int’
  148 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_066b7032.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_066b7032.c:148:5: error: expected declaration or statement at end of input
  148 |     mat2.cols = read_int("Enter number of columns (1-100): ", 1
      |     ^~~~
